--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       position: fixed;
       inset: 0;
       z-index: -1;
-      background-image: url('https://magic-pattern-assets.vercel.app/patterns/cubes.svg'); /* Replace with your own asset or keep default */
+      background-image: url('https://as2.ftcdn.net/v2/jpg/05/67/03/99/1000_F_567039995_0uCddn8BXzQrBaP6hAUDK9XmbQxr1aXb.jpg');
       background-size: cover;
       background-position: center;
       opacity: 0.08;
