--- a/index.html
+++ b/index.html
@@ -5,155 +5,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sarge Hosting</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0f0f0f;
-      color: white;
-    }
-
-    .fixed-pattern-background {
-      position: fixed;
-      inset: 0;
-      z-index: -1;
-      background-image: url('https://magic-pattern-assets.vercel.app/patterns/cubes.svg'); /* Replace with your own asset or keep default */
-      background-size: cover;
-      background-position: center;
-      opacity: 0.08;
-    }
-
-    header {
-      padding: 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: rgba(20, 20, 20, 0.8);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(255,255,255,0.1);
-    }
-
-    .brand {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    .nav-links a {
-      margin-left: 2rem;
-      color: white;
-      text-decoration: none;
-      border-radius: 10px;
-      padding: 0.4rem 0.8rem;
-      transition: background 0.3s;
-    }
-
-    .nav-links a:hover {
-      background: rgba(255,255,255,0.1);
-    }
-
-    .main-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 80vh;
-      text-align: center;
-      padding: 2rem;
-    }
-
-    .main-content h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .main-content p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin-bottom: 2rem;
-      opacity: 0.8;
-    }
-
-    .register-form {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 2rem;
-      border-radius: 20px;
-      max-width: 400px;
-      width: 100%;
-      backdrop-filter: blur(5px);
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-    }
-
-    .register-form input,
-    .register-form button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-    }
-
-    .register-form input {
-      background: rgba(255,255,255,0.1);
-      color: white;
-    }
-
-    .register-form button {
-      background: #00aaff;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .register-form button:hover {
-      background: #008ecc;
-    }
-
-    footer {
-      padding: 2rem;
-      text-align: center;
-      font-size: 0.9rem;
-      opacity: 0.6;
-    }
-  </style>
 </head>
 <body>
 
   <div class="fixed-pattern-background magic-pattern[cubes]" view="dashboard"></div>
 
+  <!-- Header -->
   <header>
-    <div class="brand">Sarge Hosting</div>
+    <div class="brand">
+      <img src="images/logo.png" alt="Sarge Hosting Logo" class="logo" />
+      <span>Sarge Hosting</span>
+    </div>
     <nav class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">Plans</a>
-      <a href="#">Login</a>
+      <a href="#features">Why Sarge</a>
+      <a href="#auth">Login / Sign Up</a>
     </nav>
   </header>
 
-  <main class="main-content">
-    <h1>Fast, Secure, and Scalable Hosting</h1>
-    <p>Launch your website today with Sarge Hosting. Get started with fast servers, reliable uptime, and unmatched support.</p>
-    
-    <div class="register-form">
-      <h2>Create an Account</h2>
-      <form action="/register" method="POST">
-        <input type="text" name="username" placeholder="Username" required />
-        <input type="email" name="email" placeholder="Email Address" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <button type="submit">Register</button>
-      </form>
+  <!-- Hero + Why Sarge Combo -->
+  <section class="intro-section">
+    <div class="intro-left">
+      <h1>Safe, Fast, Secure and Reliable Hosting</h1>
+      <p>Launch your site today with unmatched uptime and speed from <strong>Sgtflixy</strong>.</p>
+      <a href="#auth" class="cta-button">Get Started</a>
     </div>
-  </main>
+
+    <div class="intro-right" id="features">
+      <div class="feature-bubble">
+        <h2>Why Sarge Hosting?</h2>
+        <ul>
+          <li>⚡ Lightning-fast SSD servers</li>
+          <li>🔐 Military-grade security protocols</li>
+          <li>📈 99.99% uptime guarantee</li>
+          <li>🛠️ Built by developers, for developers</li>
+          <li>👨‍✈️ Created and trusted by <strong>Sgtflixy</strong></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Auth Section -->
+  <section id="auth" class="auth-section">
+    <div class="tabs">
+      <button id="loginTab" class="active">Login</button>
+      <button id="signupTab">Sign Up</button>
+    </div>
+
+    <!-- Login Form -->
+    <form id="loginForm" class="auth-form">
+      <h3>Login</h3>
+      <input type="text" name="login" placeholder="Username or Email" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+
+    <!-- Sign Up Form -->
+    <form id="signupForm" class="auth-form hidden">
+      <h3>Create Your Account</h3>
+      <input type="text" name="first_name" placeholder="First Name" required />
+      <input type="text" name="last_name" placeholder="Last Name" required />
+      <input type="email" name="email" placeholder="Email Address" required />
+      <input type="password" name="password" placeholder="Password (Min 8 characters, 1 symbol)" required minlength="8" pattern="(?=.*[!@#$%^&*])(?=.*[a-zA-Z0-9]).{8,}" title="At least 8 characters and 1 special character" />
+      <button type="submit">Sign Up</button>
+    </form>
+  </section>
 
   <footer>
     &copy; 2025 Sarge Hosting. All rights reserved.
   </footer>
 
+  <script>
+    const loginTab = document.getElementById('loginTab');
+    const signupTab = document.getElementById('signupTab');
+    const loginForm = document.getElementById('loginForm');
+    const signupForm = document.getElementById('signupForm');
+
+    loginTab.onclick = () => {
+      loginForm.classList.remove('hidden');
+      signupForm.classList.add('hidden');
+      loginTab.classList.add('active');
+      signupTab.classList.remove('active');
+    };
+
+    signupTab.onclick = () => {
+      signupForm.classList.remove('hidden');
+      loginForm.classList.add('hidden');
+      signupTab.classList.add('active');
+      loginTab.classList.remove('active');
+    };
+  </script>
 </body>
 </html>
