--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sarge Hosting</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- Pattern Background -->
+  <!-- Background Pattern -->
   <div class="fixed-pattern-background magic-pattern[cubes]" view="dashboard"></div>
 
   <!-- Header -->
-  <header>
+  <header class="glass-bubble">
     <div class="brand">
       <img src="images/logo.png" alt="Sarge Hosting Logo" class="logo" />
       <span>Sarge Hosting</span>
@@ -23,62 +23,59 @@
     </nav>
   </header>
 
-  <!-- Intro Section: Hero + Why Sarge -->
-  <section class="intro-section">
-    <div class="intro-left">
-      <h1>Safe, Fast, Secure and Reliable Hosting</h1>
-      <p>Launch your site today with unmatched uptime and speed from <strong>Sgtflixy</strong>.</p>
+  <!-- Intro + About Section -->
+  <section class="intro-container">
+    <div class="intro-card glass-bubble">
+      <h1>Safe, Fast, Secure & Reliable Hosting</h1>
+      <p>Built by <strong>Sgtflixy</strong> — made for creators, developers, and teams who demand excellence.</p>
       <a href="#auth" class="cta-button">Get Started</a>
     </div>
 
-    <div class="intro-right" id="features">
-      <div class="feature-bubble">
-        <h2>Why Sarge Hosting?</h2>
-        <ul>
-          <li>⚡ Lightning-fast SSD servers</li>
-          <li>🔐 Military-grade security protocols</li>
-          <li>📈 99.99% uptime guarantee</li>
-          <li>🛠️ Built by developers, for developers</li>
-          <li>👨‍✈️ Created and trusted by <strong>Sgtflixy</strong></li>
-        </ul>
-      </div>
+    <div class="about-card glass-bubble" id="features">
+      <h2>Why Sarge Hosting?</h2>
+      <ul>
+        <li>⚡ Super-fast SSD performance</li>
+        <li>🔐 Encrypted, secure, and protected</li>
+        <li>🧠 Easy-to-use control panel</li>
+        <li>📈 99.99% uptime & global CDN</li>
+        <li>👨‍✈️ Trusted by <strong>Sgtflixy</strong></li>
+      </ul>
     </div>
   </section>
 
   <!-- Auth Section -->
   <section id="auth" class="auth-section">
-    <div class="tabs">
-      <button id="loginTab" class="active">Login</button>
-      <button id="signupTab">Sign Up</button>
+    <div class="auth-tabs glass-bubble">
+      <div class="tabs">
+        <button id="loginTab" class="active">Login</button>
+        <button id="signupTab">Sign Up</button>
+      </div>
+
+      <!-- Login Form -->
+      <form id="loginForm" class="auth-form">
+        <input type="text" name="login" placeholder="Username or Email" required />
+        <input type="password" name="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+
+      <!-- Sign Up Form -->
+      <form id="signupForm" class="auth-form hidden">
+        <input type="text" name="first_name" placeholder="First Name" required />
+        <input type="text" name="last_name" placeholder="Last Name" required />
+        <input type="email" name="email" placeholder="Email Address" required />
+        <input type="password" name="password" placeholder="Password (Min 8 chars, 1 symbol)" required minlength="8"
+          pattern="(?=.*[!@#$%^&*])(?=.*[a-zA-Z0-9]).{8,}"
+          title="At least 8 characters and 1 special character"/>
+        <button type="submit">Sign Up</button>
+      </form>
     </div>
-
-    <!-- Login Form -->
-    <form id="loginForm" class="auth-form">
-      <h3>Login</h3>
-      <input type="text" name="login" placeholder="Username or Email" required />
-      <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
-
-    <!-- Sign Up Form -->
-    <form id="signupForm" class="auth-form hidden">
-      <h3>Create Your Account</h3>
-      <input type="text" name="first_name" placeholder="First Name" required />
-      <input type="text" name="last_name" placeholder="Last Name" required />
-      <input type="email" name="email" placeholder="Email Address" required />
-      <input type="password" name="password" placeholder="Password (Min 8 chars, 1 symbol)" required minlength="8"
-        pattern="(?=.*[!@#$%^&*])(?=.*[a-zA-Z0-9]).{8,}"
-        title="At least 8 characters and 1 special character" />
-      <button type="submit">Sign Up</button>
-    </form>
   </section>
 
   <!-- Footer -->
-  <footer>
+  <footer class="glass-bubble">
     &copy; 2025 Sarge Hosting. All rights reserved.
   </footer>
 
-  <!-- Tab Switch Logic -->
   <script>
     const loginTab = document.getElementById('loginTab');
     const signupTab = document.getElementById('signupTab');
