--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sarge Hosting</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
-  <!-- Background Pattern -->
+  <!-- Pattern Background -->
   <div class="fixed-pattern-background magic-pattern[cubes]" view="dashboard"></div>
 
   <!-- Header -->
@@ -23,23 +24,45 @@
     </nav>
   </header>
 
-  <!-- Intro + About Section -->
-  <section class="intro-container">
-    <div class="intro-card glass-bubble">
+  <!-- Structured Hero & Features Section -->
+  <section class="intro-grid">
+    <!-- Hero -->
+    <div class="intro-hero glass-bubble">
       <h1>Safe, Fast, Secure & Reliable Hosting</h1>
       <p>Built by <strong>Sgtflixy</strong> — made for creators, developers, and teams who demand excellence.</p>
       <a href="#auth" class="cta-button">Get Started</a>
     </div>
 
-    <div class="about-card glass-bubble" id="features">
-      <h2>Why Sarge Hosting?</h2>
-      <ul>
-        <li>⚡ Super-fast SSD performance</li>
-        <li>🔐 Encrypted, secure, and protected</li>
-        <li>🧠 Easy-to-use control panel</li>
-        <li>📈 99.99% uptime & global CDN</li>
-        <li>👨‍✈️ Trusted by <strong>Sgtflixy</strong></li>
-      </ul>
+    <!-- Features -->
+    <div class="intro-features">
+      <h2 class="features-heading">Why Sarge Hosting?</h2>
+      <div class="feature-grid">
+        <div class="feature-card glass-bubble">
+          <i class="fas fa-tachometer-alt"></i>
+          <h3>Super-fast SSD Performance</h3>
+          <p>Experience blazing-fast load speeds and optimized hardware performance.</p>
+        </div>
+        <div class="feature-card glass-bubble">
+          <i class="fas fa-lock"></i>
+          <h3>End-to-End Security</h3>
+          <p>Military-grade encryption and protected infrastructure from day one.</p>
+        </div>
+        <div class="feature-card glass-bubble">
+          <i class="fas fa-cogs"></i>
+          <h3>Simple Control Panel</h3>
+          <p>Manage everything easily with our intuitive user dashboard.</p>
+        </div>
+        <div class="feature-card glass-bubble">
+          <i class="fas fa-signal"></i>
+          <h3>99.99% Uptime & CDN</h3>
+          <p>Stay online around the world with our global CDN and stable network.</p>
+        </div>
+        <div class="feature-card glass-bubble">
+          <i class="fas fa-user-shield"></i>
+          <h3>Trusted by Sgtflixy</h3>
+          <p>Built and battle-tested by developers who know what matters.</p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -51,14 +74,14 @@
         <button id="signupTab">Sign Up</button>
       </div>
 
-      <!-- Login Form -->
+      <!-- Login -->
       <form id="loginForm" class="auth-form">
         <input type="text" name="login" placeholder="Username or Email" required />
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
 
-      <!-- Sign Up Form -->
+      <!-- Sign Up -->
       <form id="signupForm" class="auth-form hidden">
         <input type="text" name="first_name" placeholder="First Name" required />
         <input type="text" name="last_name" placeholder="Last Name" required />
@@ -76,6 +99,7 @@
     &copy; 2025 Sarge Hosting. All rights reserved.
   </footer>
 
+  <!-- Tabs Script -->
   <script>
     const loginTab = document.getElementById('loginTab');
     const signupTab = document.getElementById('signupTab');
