--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </nav>
   </header>
 
-  <!-- Structured Hero & Features Section -->
+  <!-- Hero + Features Section -->
   <section class="intro-grid">
-    <!-- Hero -->
+    <!-- Hero CTA -->
     <div class="intro-hero glass-bubble">
       <h1>Safe, Fast, Secure & Reliable Hosting</h1>
       <p>Built by <strong>Sgtflixy</strong> — made for creators, developers, and teams who demand excellence.</p>
@@ -34,9 +34,9 @@
     </div>
 
     <!-- Features -->
-    <div class="intro-features">
+    <div class="intro-features centered" id="features">
       <h2 class="features-heading">Why Sarge Hosting?</h2>
-      <div class="feature-grid">
+      <div class="feature-grid centered-grid">
         <div class="feature-card glass-bubble">
           <i class="fas fa-tachometer-alt"></i>
           <h3>Super-fast SSD Performance</h3>
@@ -44,23 +44,23 @@
         </div>
         <div class="feature-card glass-bubble">
           <i class="fas fa-lock"></i>
-          <h3>End-to-End Security</h3>
+          <h3>Encrypted & Secure</h3>
           <p>Military-grade encryption and protected infrastructure from day one.</p>
         </div>
         <div class="feature-card glass-bubble">
           <i class="fas fa-cogs"></i>
-          <h3>Simple Control Panel</h3>
-          <p>Manage everything easily with our intuitive user dashboard.</p>
+          <h3>Easy-to-use Control Panel</h3>
+          <p>Manage everything simply with a beautiful, intuitive interface.</p>
         </div>
         <div class="feature-card glass-bubble">
           <i class="fas fa-signal"></i>
           <h3>99.99% Uptime & CDN</h3>
-          <p>Stay online around the world with our global CDN and stable network.</p>
+          <p>High availability and global content delivery for your users.</p>
         </div>
         <div class="feature-card glass-bubble">
           <i class="fas fa-user-shield"></i>
           <h3>Trusted by Sgtflixy</h3>
-          <p>Built and battle-tested by developers who know what matters.</p>
+          <p>Created by experts who use the product themselves. No fluff.</p>
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
     &copy; 2025 Sarge Hosting. All rights reserved.
   </footer>
 
-  <!-- Tabs Script -->
+  <!-- Tab Script -->
   <script>
     const loginTab = document.getElementById('loginTab');
     const signupTab = document.getElementById('signupTab');
