--- a/index.html
+++ b/index.html
@@ -26,43 +26,23 @@
 
   <!-- Hero + Features Section -->
   <section class="intro-grid">
-    <!-- Hero CTA -->
+    <!-- Hero -->
     <div class="intro-hero glass-bubble">
       <h1>Safe, Fast, Secure & Reliable Hosting</h1>
       <p>Built by <strong>Sgtflixy</strong> — made for creators, developers, and teams who demand excellence.</p>
       <a href="#auth" class="cta-button">Get Started</a>
     </div>
 
-    <!-- Features -->
-    <div class="intro-features centered" id="features">
-      <h2 class="features-heading">Why Sarge Hosting?</h2>
-      <div class="feature-grid centered-grid">
-        <div class="feature-card glass-bubble">
-          <i class="fas fa-tachometer-alt"></i>
-          <h3>Super-fast SSD Performance</h3>
-          <p>Experience blazing-fast load speeds and optimized hardware performance.</p>
-        </div>
-        <div class="feature-card glass-bubble">
-          <i class="fas fa-lock"></i>
-          <h3>Encrypted & Secure</h3>
-          <p>Military-grade encryption and protected infrastructure from day one.</p>
-        </div>
-        <div class="feature-card glass-bubble">
-          <i class="fas fa-cogs"></i>
-          <h3>Easy-to-use Control Panel</h3>
-          <p>Manage everything simply with a beautiful, intuitive interface.</p>
-        </div>
-        <div class="feature-card glass-bubble">
-          <i class="fas fa-signal"></i>
-          <h3>99.99% Uptime & CDN</h3>
-          <p>High availability and global content delivery for your users.</p>
-        </div>
-        <div class="feature-card glass-bubble">
-          <i class="fas fa-user-shield"></i>
-          <h3>Trusted by Sgtflixy</h3>
-          <p>Created by experts who use the product themselves. No fluff.</p>
-        </div>
-      </div>
+    <!-- Features Bubble -->
+    <div class="intro-features glass-bubble" id="features">
+      <h2>Why Sarge Hosting?</h2>
+      <ul class="feature-list">
+        <li><i class="fas fa-tachometer-alt"></i> Super-fast SSD performance</li>
+        <li><i class="fas fa-lock"></i> Encrypted, secure, and protected</li>
+        <li><i class="fas fa-cogs"></i> Easy-to-use control panel</li>
+        <li><i class="fas fa-signal"></i> 99.99% uptime & global CDN</li>
+        <li><i class="fas fa-user-shield"></i> Trusted by Sgtflixy</li>
+      </ul>
     </div>
   </section>
 
@@ -99,7 +79,7 @@
     &copy; 2025 Sarge Hosting. All rights reserved.
   </footer>
 
-  <!-- Tab Script -->
+  <!-- Tab Switch Logic -->
   <script>
     const loginTab = document.getElementById('loginTab');
     const signupTab = document.getElementById('signupTab');
