--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <div class="intro-features glass-bubble" id="features">
       <h2>Why Sarge Hosting?</h2>
       <ul class="feature-list">
-        <li><i class="fas fa-tachometer-alt"></i> Super-fast SSD performance</li>
+        <li><i class="fas fa-tachometer-alt"></i> Super Fast Server Uptimes</li>
         <li><i class="fas fa-lock"></i> Encrypted, secure, and protected</li>
         <li><i class="fas fa-cogs"></i> Easy-to-use control panel</li>
         <li><i class="fas fa-signal"></i> 99.99% uptime & global CDN</li>
-        <li><i class="fas fa-user-shield"></i> Trusted by Sgtflixy</li>
+        <li><i class="fas fa-user-shield"></i> Cheap and Wide Range Of Plans</li>
       </ul>
     </div>
   </section>
